summer-k8s/istio/authorizationpolicy/AuthorizationPolicy-demo11.yaml
# 要仅允许经过认证的用户，请将 principal 设置为 "*"，例如：
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name: httpbin
 namespace: foo
spec:
 selector:
   matchLabels:
     app: httpbin
     version: v1
 action: ALLOW
 rules:
 - from:
   - source:
       principals: ["*"]
   to:
   - operation:
       methods: ["GET", "POST"]
