summer-k8s/istio/authorizationpolicy/AuthorizationPolicy-demo4.yaml
# 以下示例策略允许访问前缀为 /test/* 或后缀为 */info 的路径。
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: tester
  namespace: default
spec:
  selector:
    matchLabels:
      app: products
  action: ALLOW
  rules:
  - to:
    - operation:
        paths: ["/test/*", "*/info"]
