summer-k8s/istio/authorizationpolicy/AuthorizationPolicy-demo6.yaml
# 下面的示例拒绝到 /admin 路径且不带请求主体的请求：
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: enable-jwt-for-admin
  namespace: default
spec:
  selector:
    matchLabels:
      app: products
  action: DENY
  rules:
  - to:
    - operation:
        paths: ["/admin"]
    from:
    - source:
        notRequestPrincipals: ["*"]
